--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <title>Home - My Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YK0SGWPECY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YK0SGWPECY');
+</script>
+
+  
 <body>
   <header>
     <h1>Welcome to Our Website</h1>
@@ -21,4 +33,5 @@
     <p>&copy; 2025 My Website</p>
   </footer>
 </body>
+
 </html>
